@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - If Alien::Base is a prereq make it 0.036 at minimum as
+    that is the first version compatible with Alien::Build
 
 0.09      2017-02-09 14:10:08 -0500
   - require Alien::Build 0.15 for bug fixes
